--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1 || ^8",
-        "ext-json": "*"
+        "ext-json": "*",
+        "symfony/polyfill-php80": "^1.23"
     },
     "require-dev": {
         "vimeo/psalm": "^4.8",
