Created unit tests for the FileFinder

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
         "psr-4": {
             "Swiftly\\Template\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Swiftly\\Template\\Tests\\": "tests/"
+        }
     }
 }
