Tests for the HelperContext

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,6 +6,7 @@
     <testsuites>
         <testsuite name="unit">
             <directory suffix=".php">tests</directory>
+            <exclude>tests/templates</exclude>
         </testsuite>
     </testsuites>
     <coverage>
