--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           name: "Unit Tests"
           command: |
               XDEBUG_MODE=coverage ./vendor/bin/phpunit --config=phpunit.xml.dist
-              ./vendor/bin/php-coveralls
+              ./vendor/bin/php-coveralls --config .circleci/.coveralls.yml
 workflows:
   version: 2
   build:
