--- a/.circleci/.coveralls.yml
+++ b/.circleci/.coveralls.yml
@@ -1,3 +1,3 @@
 # php-coveralls
-coverage_clover: ../reports/clover.xml
-json_path: ../reports/coveralls.json
+coverage_clover: reports/clover.xml
+json_path: reports/coveralls.json
