Tidy up file naming

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: "Unit Tests"
           command: |
-              XDEBUG_MODE=coverage ./vendor/bin/phpunit --config=phpunit.xml.dist
+              XDEBUG_MODE=coverage ./vendor/bin/phpunit --config=phpunit.ci.xml
               ./vendor/bin/php-coveralls --config .circleci/.coveralls.yml
 workflows:
   version: 2
