--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,7 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^7.4 || ^8",
-        "ext-json": "*",
-        "symfony/polyfill-php80": "^1.23"
+        "php": "^8"
     },
     "require-dev": {
         "vimeo/psalm": "^5.14",
